--- a/public/stylesheets/arScreen.css
+++ b/public/stylesheets/arScreen.css
@@ -181,15 +181,13 @@
 }
 
 .marcadores_container {
-  overflow: auto;
-  width: 100%;
-  max-height: 75%;
-  display: flex;
-  justify-content: space-between;
+  overflow-y: auto;
+  margin: 0px 0px 90px 0px;
+  display: grid;
+  place-items: center;
 }
 
 .img-gallery {
-  width: 80%;
   margin: 5rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
