--- a/public/partials/navigation.ejs
+++ b/public/partials/navigation.ejs
@@ -1,450 +1,116 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
-html,
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Quicksand", sans-serif;
-    font-size: 62.5%;
-    font-size: 10px;
-}
-/*-- Inspiration taken from abdo steif -->
-/* --> https://codepen.io/abdosteif/pen/bRoyMb?editors=1100*/
-
-/* Navbar section */
-
-.nav {
-    width: 100%;
-    height: 65px;
-    position: fixed;
-    line-height: 65px;
-    text-align: center;
+<!DOCTYPE html>
+<html>
+<head>
+<title>Navbar</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body, html {
+  height: 100%;
+  line-height: 1.8;
+  font-family: "Raleway", sans-serif;
 }
 
-      .nav div.logo {
-        float: left;
-        width: auto;
-        height: auto;
-        padding-left: 3rem;
-      }
-      .nav div.logo a {
-        text-decoration: none;
-        color: #fff;
-        font-size: 2.5rem;
-      }
-
-    .nav div.logo 
-      a:hover {
-         color: #00fffc;
-    }
-
-.nav div.main_list {
-    height: 65px;
-    float: right;
-}
-
-      .nav div.main_list ul {
-        width: 100%;
-        height: 65px;
-        display: flex;
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
-
-      .nav div.main_list ul li {
-        width: auto;
-        height: 65px;
-        padding: 0;
-        padding-right: 3rem;
-      }
-
-.nav div.main_list ul li a {
-    text-decoration: none;
-    color: #fff;
-    line-height: 65px;
-    font-size: 2.4rem;
-}
-
-.nav div.main_list ul li a:hover {
-    color: #00fffc;
-}
-
-
-.navTrigger {
-    display: none;
-}
-
-.nav {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;
+/* Aplicar estilos al fondo del navbar */
+.w3-bar {
     backdrop-filter: blur(10px);
-        background-color: rgba(23, 20, 20, 0.5); /* Red color with 50% opacity */
-       
+    background-color: rgba(23, 20, 20, 0.5);
+    position: relative;
+    right: 24px;
 }
 
-
-/* Media qurey section */
-
-
-@media screen and (max-width:768px) {
-    .navTrigger {
-        display: block;
-    }
-    .nav div.logo {
-        margin-left: 15px;
-    }
-    .nav div.main_list {
-        width: 100%;
-        height: 0;
-        overflow: hidden;
-    }
-    .nav div.show_list {
-        height: auto;
-        display: none;
-    }
-    .nav div.main_list ul {
-        flex-direction: column;
-        width: 100%;
-        height: 100vh;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        backdrop-filter: blur(10px);
-        background-color: rgba(6, 5, 5, 0.5); /* Red color with 50% opacity */
-        /*same background color of navbar*/
-        background-position: center top;
-    }
-    .nav div.main_list ul li {
-        width: 100%;
-        text-align: right;
-    }
-    .nav div.main_list ul li a {
-        text-align: center;
-        width: 100%;
-        font-size: 3rem;
-        padding: 20px;
-    }
-    .nav div.media_button {
-        display: block;
-    }
+.w3-bar .w3-button {
+  padding: 16px;
+  background: none;
 }
 
-
-/* Animation */
-/* Inspiration taken from Dicson https://codemyui.com/simple-hamburger-menu-x-mark-animation/ */
-
-.navTrigger {
-    cursor: pointer;
-    width: 30px;
-    height: 25px;
-    margin: auto;
-    position: absolute;
-    right: 30px;
-    top: 0;
-    bottom: 0;
+.w3-white, .w3-hover-white:hover {
+    backdrop-filter: blur(10px);
+    background-color: rgba(23, 20, 20, 0.5);
+    position: relative;
+    right: 24px;
 }
 
-.navTrigger i {
-    background-color: #fff;
-    border-radius: 2px;
-    content: '';
-    display: block;
-    width: 100%;
-    height: 4px;
+.w3-black, .w3-hover-black:hover {
+  position: relative;
+  left: 0;
+  top: 0;
 }
+</style>
+</head>
+<body>
 
-.navTrigger i:nth-child(1) {
-    -webkit-animation: outT 0.8s backwards;
-    animation: outT 0.8s backwards;
-    -webkit-animation-direction: reverse;
-    animation-direction: reverse;
-}
-
-.navTrigger i:nth-child(2) {
-    margin: 5px 0;
-    -webkit-animation: outM 0.8s backwards;
-    animation: outM 0.8s backwards;
-    -webkit-animation-direction: reverse;
-    animation-direction: reverse;
-}
-
-.navTrigger i:nth-child(3) {
-    -webkit-animation: outBtm 0.8s backwards;
-    animation: outBtm 0.8s backwards;
-    -webkit-animation-direction: reverse;
-    animation-direction: reverse;
-}
-
-.navTrigger.active i:nth-child(1) {
-    -webkit-animation: inT 0.8s forwards;
-    animation: inT 0.8s forwards;
-}
-
-.navTrigger.active i:nth-child(2) {
-    -webkit-animation: inM 0.8s forwards;
-    animation: inM 0.8s forwards;
-}
-
-.navTrigger.active i:nth-child(3) {
-    -webkit-animation: inBtm 0.8s forwards;
-    animation: inBtm 0.8s forwards;
-}
-
-@-webkit-keyframes inM {
-    50% {
-        -webkit-transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(45deg);
-    }
-}
-
-@keyframes inM {
-    50% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(45deg);
-    }
-}
-
-@-webkit-keyframes outM {
-    50% {
-        -webkit-transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(45deg);
-    }
-}
-
-@keyframes outM {
-    50% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(45deg);
-    }
-}
-
-  @-webkit-keyframes inT {
-    0% {
-     -webkit-transform:
-     translateY(0px) 
-     rotate(0deg);
-    }
-    50% {
-     -webkit-transform: 
-     translateY(9px) 
-     rotate(0deg);
-    }
-    100% {
-     -webkit-transform: 
-     translateY(9px) 
-     rotate(135deg);
-    }
-  }
-
-@keyframes inT {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(9px) rotate(135deg);
-    }
-}
-
-@-webkit-keyframes outT {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(9px) rotate(135deg);
-    }
-}
-
-@keyframes outT {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(9px) rotate(135deg);
-    }
-}
-
-@-webkit-keyframes inBtm {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(-9px) rotate(135deg);
-    }
-}
-
-@keyframes inBtm {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(-9px) rotate(135deg);
-    }
-}
-
-@-webkit-keyframes outBtm {
-    0% {
-        -webkit-transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        -webkit-transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        -webkit-transform: translateY(-9px) rotate(135deg);
-    }
-}
-
-@keyframes outBtm {
-    0% {
-        transform: translateY(0px) rotate(0deg);
-    }
-    50% {
-        transform: translateY(-9px) rotate(0deg);
-    }
-    100% {
-        transform: translateY(-9px) rotate(135deg);
-    }
-}
-
-.affix {
-    padding: 0;
-    background-color: #111;
-}
-
-
-    /* -- YouTube Link Styles -- */
-
-    #source-link {
-      top: 60px;
-    }
-
-    #source-link>i {
-      color: rgb(94, 106, 210);
-    }
-
-    #yt-link {
-      top: 10px;
-    }
-
-    #yt-link>i {
-      color: rgb(219, 31, 106);
-
-    }
-
-    .meta-link {
-      align-items: center;
-      backdrop-filter: blur(3px);
-      background-color: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      border-radius: 6px;
-      box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
-      cursor: pointer;
-      display: inline-flex;
-      gap: 5px;
-      margin-top:100px;
-      left: 10px;
-      padding: 10px 20px;
-      position: fixed;
-      text-decoration: none;
-      transition: background-color 600ms, border-color 600ms;
-      z-index: 10000;
-    }
-
-    .meta-link:hover {
-      background-color: rgba(255, 255, 255, 0.1);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-    }
-
-    .meta-link>i,
-    .meta-link>span {
-      height: 20px;
-      line-height: 20px;
-    }
-
-    .meta-link>span {
-      color: white;
-      font-family: "Rubik", sans-serif;
-      transition: color 600ms;
-    }
-
-
-    </style>
-<nav class="nav">
-  <div class="container" style="display: grid; grid-template-columns: 1fr 1fr;">
-    <div class="logo">
-      <a href="/"><%= title %></a>
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-card" id="myNavbar">
+    <a href="/" class="w3-bar-item w3-button w3-wide">EXGEN STATION</a>
+    <!-- Right-sided navbar links -->
+    <div class="w3-right w3-hide-small">
+      <a href="/about" class="w3-bar-item w3-button">About</a>
+      <a href="/contact" class="w3-bar-item w3-button">Contact</a>
+      <% if (current_user && rol === 'admin') { %>
+        <a href="/users" class="w3-bar-item w3-button">Admin</a>
+      <% } %>
+      <% if (current_user && rol === 'diseñador') { %>
+        <a href="/markers" class="w3-bar-item w3-button">Dashboard</a>
+      <% } %>
+      <% if (current_user) { %>
+        <a href="/" onclick="cerrarSesion()" class="w3-bar-item w3-button">Logout</a>
+      <% } else { %>
+        <a href="/auth/login" class="w3-bar-item w3-button">Login</a>
+      <% } %>
     </div>
-    <div id="mainListDiv" class="main_list">
-      <ul class="navlinks">
-        <li><a href="/about"><i class="fas fa-info"></i> About</a></li>
-        <li><a href="/contact"><i class="fas fa-envelope"></i> Contact</a></li>
-        <% if (current_user && rol === 'admin') { %>
-            <li><a href="/users"><i class="fas fa-sign-in-alt"></i> Admin</a></li>
-        <% } %>
-        <% if (current_user) { %>
-            <li><a href="/" onclick="cerrarSesion()"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
-        <% }else{ %>
-            <li><a href="/auth/login"><i class="fas fa-sign-in-alt"></i> Login</a></li>
-        <% } %>
-      </ul>
-    </div>
-    <span class="navTrigger">
-      <i></i>
-      <i></i>
-      <i></i>
-    </span>
+    <!-- Hide right-floated links on small screens and replace them with a menu icon -->
+    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
+      <i class="fa fa-bars"></i>
+    </a>
   </div>
+</div>
+
+<!-- Sidebar on small screens when clicking the menu icon -->
+<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+  <a href="/about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
+  <a href="/contact" onclick="w3_close()" class="w3-bar-item w3-button">Contact</a>
+  <% if (current_user && rol === 'admin') { %>
+    <a href="/users" onclick="w3_close()" class="w3-bar-item w3-button">Admin</a>
+  <% } %>
+  <% if (current_user && rol === 'diseñador') { %>
+    <a href="/markers" onclick="w3_close()" class="w3-bar-item w3-button">Dashboard</a>
+  <% } %>
+  <% if (current_user) { %>
+    <a href="/" onclick="cerrarSesion(); w3_close()" class="w3-bar-item w3-button">Logout</a>
+  <% } else { %>
+    <a href="/auth/login" onclick="w3_close()" class="w3-bar-item w3-button">Login</a>
+  <% } %>
 </nav>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 <script>
-  $(window).scroll(function() {
-    if ($(document).scrollTop() > 50) {
-      $('.nav').addClass('affix');
-      console.log("OK");
-    } else {
-      $('.nav').removeClass('affix');
-    }
-  });
+// Toggle between showing and hiding the sidebar when clicking the menu icon
+var mySidebar = document.getElementById("mySidebar");
 
+function w3_open() {
+  if (mySidebar.style.display === 'block') {
+    mySidebar.style.display = 'none';
+  } else {
+    mySidebar.style.display = 'block';
+  }
+}
 
-  $('.navTrigger').click(function () {
-    $(this).toggleClass('active');
-    console.log("Clicked menu");
-    $("#mainListDiv").toggleClass("show_list");
-    $("#mainListDiv").fadeIn();
-  });
-    function cerrarSesion() {
-      document.cookie = 'jwt=; expires=Thu, 01 Jan 1970 00:00:00 UTC';
-      document.location.href = '/';
-      // window.location.href = '/auth/logout';
-    }
+// Close the sidebar with the close button
+function w3_close() {
+    mySidebar.style.display = "none";
+}
+
+function cerrarSesion() {
+    document.cookie = 'jwt=; expires=Thu, 01 Jan 1970 00:00:00 UTC';
+    document.location.href = '/';
+    // window.location.href = '/auth/logout';
+}
 </script>
+
+</body>
+</html>
