--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,49 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <style>
+      body,h1 {font-family: "Raleway", sans-serif}
+      body, html {height: 100%}
+      .bgimg {
+        background-image: linear-gradient(
+            0deg,
+            rgba(0, 0, 0, 0.788),
+            rgba(0, 0, 0, 0.788)
+        )
+        ,url('/images/back.jpg');
+        min-height: 100%;
+        background-position: center;
+        background-size: cover;
+      }
+      .button-play {
+        backdrop-filter: blur(10px);
+        background-color: rgba(23, 20, 20, 0.5);
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+        text-decoration: none;
+      }
+      .button-play:hover {
+        background-color: rgba(23, 20, 20, 0.7);
+      }
+      /* Estilo para ajustar el tamaño de fuente del título */
+      .title {
+        font-size: 5vw; /* Tamaño de fuente relativo al ancho de la ventana */
+        max-width: 100%; /* Evita que el texto se desborde horizontalmente */
+        text-align: center; /* Alinea el texto al centro */
+      }
+    </style>
     <title><%= title %></title>
-    <%- include('../partials/head') %>
   </head>
   <body>
-    <%- include('../partials/navigation') %>
-
+    
+    <% if (typeof notice !== 'undefined' && notice) { %>
+        <div class="alert alert-success" role="notice"><%= notice %></div>
+    <% } %>
+    <% if (typeof alert !== 'undefined' && alert) { %>
+        <div class="alert alert-danger" role="alert"><%= alert %></div>
+    <% } %>
     <!-- MAIN CONTENT -->
-
-    <header class="container vh-100 d-flex justify-content-center align-items-center">
-      <div class="d-flex flex-column justify-content-center align-items-center">
-        <h1 class="display-1 my-5 fw-bold">Exgen Station</h1>
-        <a href="/arcam" class="button-play">Comenzar a jugar</a>
+    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white" style="display: grid; place-items: center;">
+      <div class="w3-display-topleft w3-padding-large w3-xlarge">
+        <%- include('../partials/navigation') %>
       </div>
-    </header>
-
-    <!-- section one -->
-    <div class="container-fluid" id="about">
-      <div class="row bg-dark text-white p-5 text-center">
-        <div class="col-md-4 offset-md-4">
-          <h3>Lorem, ipsum dolor.</h3>
-          <p>
-            Elit exercitationem id illo sit distinctio. Deserunt ut debitis
-            voluptates mollitia dignissimos eligendi vel quidem itaque dolores
-            ratione ut. Soluta accusantium dolor nemo suscipit rerum. Aliquid
-            quasi excepturi provident eos.
-          </p>
-        </div>
+      <div class="w3-display-middle" style="display: grid; place-items: center;">
+        <h1 class="w3-jumbo w3-animate-top title">EXGEN STATION</h1>
+        <hr class="w3-border-grey" style="margin:auto;width:40%">
+        <a href="/arcam" class="w3-large w3-center button-play">Comenzar a jugar</a>
+      </div>
+      <div class="w3-display-bottomleft w3-padding-large">
+        Powered by <a>Exgen Station &copy;</a>
       </div>
     </div>
 
-    <%- include("../partials/footer") %>
     <!-- JAVASCRIPT CDNS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
-
-<style>
-  .button-play{
-    color: #ECE9DD;
-  }
-</style>
