--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <style>
       body,h1 {font-family: "Raleway", sans-serif}
-      body, html {height: 100%}
+      body, html {
+        height: 100%; 
+        background-color: #101010;
+      }
       .bgimg {
         background-image: linear-gradient(
             0deg,
