Cambio de color en background de login y register

--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
     <title><%= title %></title>
 </head>
-<body>
+<body class=" w3-animate-opacity ">
     <% if (typeof notice !== 'undefined' && notice) { %>
         <div class="alert alert-success" role="notice"><%= notice %></div>
     <% } %>
