--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,18 @@
 
 
 body {
-  background-color: #142B37;
+  /* background-color: #142B37; */
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.788),
+      rgba(0, 0, 0, 0.788)
+  )
+  ,url('/images/back.jpg');
   height: 100vh;
   width: 100%;
   padding: 0 5% 0;
+  background-position: center;
+  background-size: cover;
 }
 
 .alert {
