--- a/public/stylesheets/arScreen.css
+++ b/public/stylesheets/arScreen.css
@@ -182,7 +182,7 @@
 
 .marcadores_container {
   overflow-y: auto;
-  margin: 0px 0px 90px 0px;
+  margin: 0px 0px 20px 0px;
   display: grid;
   place-items: center;
 }
@@ -193,6 +193,31 @@
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-auto-rows: minmax(300px, 1fr);
   gap: 30px;
+}
+.recompensas_container {
+  overflow-y: auto;
+  width: 80%;
+  margin: 10px 0px 20px 0px;
+  display: block; /* Change list-item to block for better handling of nested divs */
+  min-height: 80px;
+}
+
+.titleReco {
+  font-weight: bold;
+  font-size: 1.2em;
+  margin-bottom: 10px; /* Space between title and description */
+  color: #b08441;
+}
+
+.descReco {
+  color: #142b31;
+  font-weight: normal;
+  font-size: 0.8em;
+  margin-bottom: 20px; /* Space between items */
+}
+
+.img-recompensas_list {
+  width: 100%;
 }
 
 .img-gallery > img {
