--- a/public/views/ar.ejs
+++ b/public/views/ar.ejs
@@ -72,14 +72,14 @@
 
       <div class="menu" id="menu">
         <div class="menuContenido">
-          <img src="../images/th1.jpeg" width="75" height="75" />
+          <img src="../images/bazar.png" width="90" height="90" />
           <h2 id="nombreUser">HOLA USUARIO</h2>
 
           <h3>Recompensas Obetnidas:</h3>
           <div class="recompensas_container">
             <div class="recompensas_list" id="rlist"></div>
           </div>
-          
+
           <!-- LISTA DE MARCADORES ENCONTRADOS -->
           <h3>Marcadores Encontrados:</h3>
           <div class="marcadores_container">
